--- a/products/strahovka-covid-19/index.html
+++ b/products/strahovka-covid-19/index.html
@@ -362,7 +362,9 @@
 					'phone': '',
 					'url': 'https://vsekredity-rostov.ru/products/strahovka-covid-19/',
 					'city': 'Ростов-на-Дону',
-					'utm_source': "Все Кредиты Ростов-на-Дону"
+					'utm_source': "Все Кредиты Ростов-на-Дону",
+					'source_id': "631",
+					'broker_id': "17"
 				},
 				
 
